添加es模块及参数配置